--- a/top.css
+++ b/top.css
@@ -26,7 +26,6 @@ body {
   line-height: 1;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
   text-size-adjust: none;
 }
 
@@ -37,8 +36,7 @@ ol, ul, dd {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 input:focus {
@@ -110,7 +108,6 @@ em {
   padding: 0;
   border: 0;
 }
-
 .topbanner_div > ul {
   width: 100%;
   height: 70px;
@@ -118,24 +115,20 @@ em {
   padding: 0;
   border: 0;
 }
-
 .topbanner_div > ul > li {
   width: 490px;
   height: 70px;
   float: left;
 }
-
 .topbanner_div > ul > li > img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .topbanner_div > ul > li:last-child {
   width: 220px;
   position: relative;
 }
-
 .topbanner_div > ul > li:last-child > .topbanner_closebtn {
   position: absolute;
   width: 50px;
@@ -144,7 +137,7 @@ em {
   padding: 0;
   border: 0;
   right: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: 700;
   font-size: 30px;
   color: #333;
@@ -165,7 +158,7 @@ em {
   margin: 0 auto;
   padding: 0;
   border: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: "700";
   font-size: 12px;
   color: #333;
@@ -188,20 +181,16 @@ em {
 .left_menu {
   float: left;
 }
-
 .left_menu > li {
   position: relative;
 }
-
 .left_menu > li::after {
   position: absolute;
   right: 0;
 }
-
 .left_menu > li:first-child::after {
   content: "|";
 }
-
 .left_menu > li:last-child::after {
   content: "▼";
 }
@@ -222,7 +211,6 @@ em {
   border: 0;
   margin-top: 10px;
 }
-
 .nav_div > .logo {
   width: 100%;
   height: 30px;
@@ -232,7 +220,6 @@ em {
   background: url("./image/logo.png") no-repeat center center;
   background-size: contain;
 }
-
 .nav_div > .search {
   width: 100%;
   height: 40px;
@@ -241,22 +228,19 @@ em {
   border: 0;
   margin-top: 10px;
 }
-
 .nav_div > .search > span {
   text-align: center;
 }
-
 .nav_div > .search > span > input {
   width: 600px;
   height: 30px;
   text-indent: 20px;
   border: 2px solid #2381ec;
   letter-spacing: 0.3px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 0;
   padding: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: "700";
   font-size: 12px;
   color: #333;
@@ -264,19 +248,17 @@ em {
   margin: 0;
   padding: 0;
 }
-
 .nav_div > .search > span > button {
   width: 80px;
   height: 30px;
   text-indent: 0px;
   border: 2px solid #2381ec;
   letter-spacing: 0.3px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 0;
   padding: 0;
   background-color: #2381ec;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: "700";
   font-size: 12px;
   color: #fff;
@@ -284,24 +266,21 @@ em {
   margin-left: -6px;
   padding: 0;
 }
-
 .nav_div > .main_menu {
   width: 100%;
   height: 40px;
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: "700";
   font-size: 18px;
   color: #fff;
   letter-spacing: 0.3px;
 }
-
 .nav_div > .main_menu > ul {
   height: auto;
 }
-
 .nav_div > .main_menu > ul > li {
   width: 120px;
   height: 40px;
@@ -310,5 +289,4 @@ em {
   line-height: 40px;
   float: left;
   cursor: pointer;
-}
-/*# sourceMappingURL=top.css.map */
+}/*# sourceMappingURL=top.css.map */
