--- a/productIndex.scss
+++ b/productIndex.scss
@@ -4,4 +4,4 @@
 .banner{
     @include div(1200px,500px,"auto",0,0);
 }
-.div{ width:100px; height:30px; border:1px solid red ; }
+.div{ width:100px; height:30px;  }
