--- a/productIndex.css
+++ b/productIndex.css
@@ -100,7 +100,12 @@ em {
   border: 0;
 }
 
-.div {
-  width: 100px;
-  height: 30px;
+.main {
+  height: auto;
+}
+
+.mainoutline {
+  width: 100%;
+  height: 400px;
+  border: 1px solid black;
 }/*# sourceMappingURL=productIndex.css.map */
