--- a/productIndex.scss
+++ b/productIndex.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import "main.scss";
 
-.banner{
-    @include div(1200px,500px,"auto",0,0);
-}
-.div{ width:100px; height:30px;  }
+.banner{ @include div(1200px,500px,"auto",0,0); }
+.main{ height:auto; }
+.mainoutline{ width:100%; height:400px; border:1px solid black; }
+
