--- a/productIndex.scss
+++ b/productIndex.scss
@@ -2,6 +2,6 @@
 @import "main.scss";
 
 .banner{ @include div(1200px,500px,"auto",0,0); }
-.main{ height:auto; }
-.mainoutline{ width:100%; height:400px; border:1px solid black; }
+.main, .mainoutline{ height:auto; }
+.newProduct_wrap{ width:100%; height:400px; border:1px solid black; }
 
