--- a/productIndex.css
+++ b/productIndex.css
@@ -108,4 +108,6 @@ em {
   width: 100%;
   height: 400px;
   border: 1px solid black;
+  margin: 0 auto;
+  padding: 0;
 }/*# sourceMappingURL=productIndex.css.map */
