--- a/productIndex.scss
+++ b/productIndex.scss
@@ -3,5 +3,6 @@
 
 .banner{ @include div(1200px,500px,"auto",0,0); }
 .main, .mainoutline{ height:auto; }
-.newProduct_wrap{ width:100%; height:400px; border:1px solid black; }
+.newProduct_wrap{ width:100%; height:400px; border:1px solid black;
+margin:0 auto; padding:0; }
 
