--- a/productIndex.css
+++ b/productIndex.css
@@ -110,4 +110,11 @@ em {
   border: 1px solid black;
   margin: 0 auto;
   padding: 0;
+}
+
+.newProduct_ul li label img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: calc(260px/4);
+  height: 270px;
 }/*# sourceMappingURL=productIndex.css.map */
