--- a/productIndex.css
+++ b/productIndex.css
@@ -113,6 +113,7 @@ em {
 }
 
 .newProduct_ul li label img {
+  background-image: url("./product/product1.jpg");
   -o-object-fit: cover;
      object-fit: cover;
   width: calc(260px/4);
