--- a/productIndex.scss
+++ b/productIndex.scss
@@ -5,5 +5,7 @@
 .main, .mainoutline{ height:auto; }
 .newProduct_wrap{ width:100%; height:400px; border:1px solid black;
 margin:0 auto; padding:0; }
-.newProduct_ul li label img{ object-fit:cover; width:calc(260px/4); height:270px; }
+.newProduct_ul li label img{ 
+    background-image:url("./product/product1.jpg");
+    object-fit:cover; width:calc(260px/4); height:270px; }
 
