--- a/productIndex.scss
+++ b/productIndex.scss
@@ -3,8 +3,10 @@
 
 .banner{ @include div(1200px,500px,"auto",0,0); }
 .main, .mainoutline{ height:auto; }
-.newProduct_wrap{ width:100%; height:400px; border:1px solid black;
-margin:0 auto; padding:0; }
+.newProduct_wrap{ width:100%; height:400px; margin:0 auto; padding:0; }
+.newProduct_wrap p { @include font("nanum",700,20,""); height: 60px; }
+.newProduct_ul { width:100%; height:auto; margin:0 auto; padding:0; }
+.newProduct_ul li { width:calc(270px/4); height:400px; border:1px solid black; }
 .newProduct_ul li label img{ 
     background-image:url("./product/product1.jpg");
     object-fit:cover; width:calc(260px/4); height:270px; }
