--- a/productIndex.scss
+++ b/productIndex.scss
@@ -2,12 +2,35 @@
 @import "main.scss";
 
 .banner{ @include div(1200px,500px,"auto",0,0); }
-.main, .mainoutline{ height:auto; }
-.newProduct_wrap{ width:100%; height:400px; margin:0 auto; padding:0; }
-.newProduct_wrap p { @include font("nanum",700,20,""); height: 60px; }
-.newProduct_ul { width:100%; height:auto; margin:0 auto; padding:0; }
-.newProduct_ul li { width:calc(270px/4); height:400px; border:1px solid black; }
-.newProduct_ul li label img{ 
-    background-image:url("./product/product1.jpg");
-    object-fit:cover; width:calc(260px/4); height:270px; }
+.main , .mainoutline { height:auto; }
+.mainoutline>article { width:1200px;  margin:0 auto; }
+.mainoutline>article:nth-child(1) { height:500px; }
+.mainoutline>article:nth-child(2) { height:500px; }
+.product_dl { width:100%; height:auto; }
+.product_dl>dt { width:100%; height:50px; 
+  text-align:center; line-height:50px;
+  font-family: 'Libre Barcode 128 Text', cursive; font-size:50px; }
+.product_dl>dd { position: relative; display:inline-block; 
+  margin-right:-30px;}
+.product_box { width:270px; height:400px; border:1px solid black; 
+  overflow:hidden; cursor:pointer; position: relative; 
+  font-family: 'Nanum Gothic', sans-serif;}
+.product_box>li { width:270px; text-align:center;  }
+.product_box>li:nth-child(1) { height:270px; 
+    background-repeat:no-repeat; background-size:cover; }
+.product_dl>dd:nth-child(2)>.product_box>li:nth-child(1) {
+  background-image:url("../product/product1.jpg"); }
+.product_dl>dd:nth-child(3)>.product_box>li:nth-child(1) { height:270px; 
+    background-image:url("../product/product2.jpg"); }  
+.product_dl>dd:nth-child(4)>.product_box>li:nth-child(1) { height:270px; 
+    background-image:url("../product/product3.jpg"); }
+.product_dl>dd:nth-child(5)>.product_box>li:nth-child(1) { height:270px; 
+    background-image:url("../product/product4.jpg"); }
+.product_box>li:nth-child(2) {height:80px; vertical-align:middle; 
+  display:table-cell; font-size:20px; }
+.product_box>li:nth-child(3) { height:50px; line-height:50px; 
+  font-size:20px;  font-weight:bolder; margin-top:-10px;  } 
+.text_yellow { color:orange; display:inline-block; }
+.text_black { color:black; display:inline-block;
+  font-weight:bolder; }
 
