--- a/productIndex.scss
+++ b/productIndex.scss
@@ -6,7 +6,7 @@
 .mainoutline>article { width:1200px;  margin:0 auto; }
 .mainoutline>article:nth-child(1) { height:500px; }
 .mainoutline>article:nth-child(2) { height:500px; }
-.product_dl { width:100%; height:auto; }
+.product_dl { width:100%; height:auto; margin:0 auto; }
 .product_dl>dt { width:100%; height:50px; text-align:center; line-height:50px; font-size:50px; }
 .product_dl>dd { position: relative; display:inline-block; margin-right:-30px;}
 .product_box { width:270px; height:400px; border:1px solid black; 
