--- a/productIndex.scss
+++ b/productIndex.scss
@@ -6,11 +6,10 @@
 .mainoutline>article { width:1200px;  margin:0 auto; }
 .mainoutline>article:nth-child(1) { height:500px; }
 .mainoutline>article:nth-child(2) { height:500px; }
-.product_dl { width:100%; height:auto; margin:0 auto; }
+.product_dl { width:100%; height:auto; margin:0 auto; display:flex; }
 .product_dl>dt { width:100%; height:50px; text-align:center; line-height:50px; font-size:50px; }
-.product_dl>dd { position: relative; display:inline-block; margin-right:-30px;}
-.product_box { width:270px; height:400px; border:1px solid black; 
-  overflow:hidden; cursor:pointer; position: relative; }
+.product_dl>dd { width:100%; display: flex; flex-direction: row; justify-content: space-between; }
+.product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; }
 .product_box>li { width:270px; text-align:center;  }
 .product_box>li:nth-child(1) { height:270px; background-repeat:no-repeat; background-size:cover; }
 .product_dl>dd:nth-child(2)>.product_box>li:nth-child(1) {
