--- a/productIndex.scss
+++ b/productIndex.scss
@@ -10,7 +10,7 @@ p { @include font("nanum",700,20,"");
 .mainoutline>article:nth-child(2) { height:500px; }
 .product_dl { width:100%; height:auto; margin:0 auto; display:flex; }
 .product_dl>dt { width:100%; height:50px; text-align:center; line-height:50px; font-size:50px; }
-.product_dl>dd { width:100%; display: flex; flex-direction: row; justify-content: space-between; }
+.product_dl>dd { width:100%; display: flex; flex-direction: row; justify-content: space-around; }
 .product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; }
 .product_box>li { width:270px; text-align:center;  }
 .product_box>li:nth-child(1) { height:270px; background-repeat:no-repeat; background-size:cover; }
