--- a/productIndex.scss
+++ b/productIndex.scss
@@ -3,17 +3,23 @@
 
 .banner{ @include div(1200px,500px,"auto",0,0); }
 .main , .mainoutline { height:auto; }
-.mainoutline>article { width:1200px;  margin:0 auto; }
-.newProduct_nm { @include font("nanum",700,20,"");
-    margin:0 auto; height: 60px;}
-.mainoutline>article:nth-child(1) { height:500px; }
-.mainoutline>article:nth-child(2) { height:500px; }
-.product_dl { width:100%; height:auto; margin:0 auto; display:flex; }
-.product_dl>dt { width:100%; height:50px; text-align:center; line-height:50px; font-size:50px; }
-.product_dl>dd { width:100%; display: flex; flex-direction: row; justify-content: space-around; }
-.product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; }
-.product_box>li { width:270px; text-align:center;  }
-.product_box>li:nth-child(1) { height:270px; background-repeat:no-repeat; background-size:cover; }
+.mainoutline{
+    &>article{ width:1200px;  margin:0 auto; 
+     &>:nth-child(1){ height:500px; }
+     &>:nth-child(2){ height:500px; }
+    }
+}
+.newProduct_nm { @include font("nanum",700,20,""); margin:0 auto; height: 60px;}
+.product_dl { width:100%; height:auto; margin:0 auto; display:flex; 
+    &>dd{
+        width:100%; display: flex; flex-direction: row; justify-content: space-around;
+        &>.product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; 
+            &>li{ width:270px; text-align:center;
+                &>:nth-child(1){ height:270px; background-repeat:no-repeat; background-size:cover; }
+            }
+        }
+    }
+}
 .product_dl>dd:nth-child(2)>.product_box>li:nth-child(1) {
   background-image:url("./product/product1.jpg"); }
 .product_dl>dd:nth-child(3)>.product_box>li:nth-child(1) { 
