--- a/productIndex.scss
+++ b/productIndex.scss
@@ -7,7 +7,7 @@
     &>article{ width:1200px;  margin:0 auto;  }
 }
 .newProduct_nm { @include font("noto",500,45,""); margin:0 auto; height: 60px; letter-spacing: 0.3px; }
-.product_dl { width:100%; height:auto; margin:0 auto; display:flex; 
+.product_dl { @include div(100%,auto,"auto",0,0); display:flex; 
     &>dd{
         width:100%; display: flex; flex-direction: row; justify-content: space-around;
         &>.product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; }
@@ -16,10 +16,10 @@
                 &>:nth-child(2){ height:80px; vertical-align:middle; display:table-cell; font-size:20px; }
                 &>:nth-child(3){ height:50px; line-height:50px; font-size:20px;  font-weight:bolder; margin-top:-10px; }
             }
-        &>:nth-child(1)>.product_box>li:nth-child(1) { background-image:url("./product/product1.jpg"); }
-        &>:nth-child(2)>.product_box>li:nth-child(1) { background-image:url("./product/product2.jpg"); }
-        &>:nth-child(3)>.product_box>li:nth-child(1) { background-image:url("./product/product3.jpg"); }
-        &>:nth-child(4)>.product_box>li:nth-child(1) { background-image:url("./product/product4.jpg"); }
+        &>:nth-child(3)>.product_box>li:nth-child(1) { background-image:url("./product/product1.jpg"); }
+        &>:nth-child(4)>.product_box>li:nth-child(1) { background-image:url("./product/product2.jpg"); }
+        &>:nth-child(5)>.product_box>li:nth-child(1) { background-image:url("./product/product3.jpg"); }
+        &>:nth-child(6)>.product_box>li:nth-child(1) { background-image:url("./product/product4.jpg"); }
     }
 }
 .text_yellow { color:orange; display:inline-block; }
