--- a/productIndex.scss
+++ b/productIndex.scss
@@ -9,9 +9,9 @@
 .newProduct_nm { @include font("noto",500,45,""); margin:0 auto; height: 60px; letter-spacing: 0.3px; }
 .product_dl { @include div(100%,auto,"auto",0,0); display:flex; 
     &>dd{
-        width:100%; display: flex; flex-direction: row; justify-content: space-around;
+        width:calc(1100px/4); display: flex; flex-direction: row; justify-content: space-around;
         &>.product_box { height:400px; border:1px solid black; overflow:hidden; cursor:pointer; }
-            &>li{ width:270px; text-align:center;
+            &>li{ text-align:center;
                 &>:nth-child(1){ height:270px; background-repeat:no-repeat; background-size:cover; }
                 &>:nth-child(2){ height:80px; vertical-align:middle; display:table-cell; font-size:20px; }
                 &>:nth-child(3){ height:50px; line-height:50px; font-size:20px;  font-weight:bolder; margin-top:-10px; }
